--- a/CsharpBeer/CsharpBeer.OrderService/appsettings.Development.json
+++ b/CsharpBeer/CsharpBeer.OrderService/appsettings.Development.json
@@ -2,10 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
-  "Grpc": {
+  "GrpcConnection": {
     "CatalogAddress": "http://31.129.107.220:8081",
     "IdentityAddress": "http://31.129.107.220:44044"
   }
