--- a/CsharpBeer/CsharpBeer.UnitTests/CsharpBeer.UnitTests.csproj
+++ b/CsharpBeer/CsharpBeer.UnitTests/CsharpBeer.UnitTests.csproj
@@ -11,7 +11,9 @@
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
+        <PackageReference Include="Grpc.Core.Testing" Version="2.46.6" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
+        <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="xunit" Version="2.4.2"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,7 +26,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CsharpBeer.OrderService\CsharpBeer.OrderService.csproj" />
+        <ProjectReference Include="..\CsharpBeer.CommonTests\CsharpBeer.CommonTests.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Using Include="Xunit"/>
+    </ItemGroup>
+    
 </Project>
